Ugly hack (reload page) to avoid options storage load bug.
Improve styling to avoid css horizontal scroll bar.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,7 +3,8 @@ body {
   font-size: 80%;
   background-color: #eee;
   margin: 4px;
-  height: 600px;
+  height: 580px;
+  padding-right: 10px;
 }
 .borderBox {
   background-color: #fff;
